# ProseLab-4

./: .gitignore  AGENTS.md  DESIGN.md  DOCKERTRANSFER.md  EXPANSION_PLAN.md  GEMINI.md  GEMINI_Proslab4.md  GOVERNANCE.md  IMPLEMENTATION_PLAN_PHASE_4.md  MEMORY.md  PLAN.md  ProseLab-4.bat  Quantum Shadows - COMPLETED DRAFTv2.md  README.md  ROADMAP.md  SOURCEOFTRUTH.md  THROUGHPUT_RESULTS.md  backlog.md  claude opus4.6_galaxy_ai_cli.docx  coding_conventions.md  conversation.json  desktop.ini  docker-compose.yml  errorlog.md  evaluate_texts.mjs  get-run-details.js  magica_debug.json  new 10  new 11  new 4  new 5  new 6  new 7  new 8  new 9  nginx.conf  package-lock.json  prev_app.jsx  project_brief.md  prose_generation_report.md  (+16 more)
proselab/narrativeOS/: .gitignore  AGENTS.md  CHANGE_LOG.md  GEMINI.md  IMPLEMENTATION_PLAN.md  README.md  ROADMAP.md  SESSION_LOG.md  SESSION_TECHNICAL_HISTORY.md  aggregate_pending_conflicts.md  append_decisions.py  aspect_dump.md  audit_backfill_report.md  bell_focused.md  check1_referenced_by.py  check2_content_spot.py  check_all_ch1_4_related.py  chen_dump.md  chen_focused.md  comprehensive_audit_report.md  correct_bell_seed_identity_error.py  decisions.md  diag1.py  diag1_out.txt  diag2.py  diag2_out.txt  emily_focused.md  entity_dump.py  entity_dump_focused.py  get_ch1_4_supersessions.py  hayden_audit.py  output.txt  pass_b_bell_audit.md  phase_7_fixtures.md  prose_test_suite.py  pyproject.toml  reconciliation_pass_a.py  reconciliation_pass_b_aspect.py  reconciliation_pass_b_aspect_followup.py  reconciliation_pass_b_chen.py  (+26 more)
(+588 files in other folders)
